<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dp_10"
    android:background="#00BCD4"
    android:paddingVertical="@dimen/dp_15"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_10">
        <TextView

            android:id="@+id/tv_info"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/sp_20"
            android:textColor="#fff"
            android:text="Hello World!"
            />
        <EditText
            android:id="@+id/edt_test"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:hint="@string/brower"
            />
        <Button
            android:id="@+id/btn_call"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btn_call"
            android:background="#4CAF50"
            />
        <Button
            android:id="@+id/btn_brower"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btn_brower"
            android:background="#4CAF50"
            android:layout_marginTop="@dimen/dp_10"
            />
        <Button
            android:id="@+id/btn_lib"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btn_libri"
            android:background="#4CAF50"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ic_launcher_background">
        <ImageView
            android:id="@+id/im_lib"
            android:scaleType="centerInside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/zoro"
            />
    </LinearLayout>

</LinearLayout>