<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dp_10"
    android:paddingVertical="@dimen/dp_15"
    android:background="@drawable/shape"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login_name"
            android:gravity="center"
            android:textColor="#EDE6F5FF"
            android:textSize="@dimen/sp_35"
            android:textStyle="bold"
            android:padding="@dimen/dp_30"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColorHint="#fff"
            android:textSize="@dimen/sp_20"
            android:background="#03A9F4"
            android:textColor="#fff"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_account"
            android:drawableTint="#fff"
            android:paddingHorizontal="7dp"
            android:paddingVertical="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="@dimen/sp_20"
            android:background="#03A9F4"
            android:textColor="#fff"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:drawableTint="#fff"
            android:textColorHint="#fff"
            android:drawablePadding="5dp"
            android:paddingHorizontal="7dp"
            android:paddingVertical="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
       <Button
           android:id="@+id/btn_dangnhap"
           android:background="#B7FC3D04"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/login_name"
           android:textColor="#fff"
           android:paddingHorizontal="@dimen/dp_20"
           android:paddingVertical="15dp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textColor="#fff"
            android:paddingHorizontal="@dimen/dp_10"
            />
        <Button
            android:id="@+id/btn_dangky"
            android:background="#3F51B5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regiter_name"
            android:textColor="#fff"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="15dp"
            />
    </LinearLayout>
</LinearLayout>